<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="@bool/pref_enable_wifi_cell_data_usage_default"
        android:key="@string/pref_enable_wifi_cell_data_usage_key"
        android:summaryOff="@string/pref_enable_wifi_cell_data_usage_summary_off"
        android:summaryOn="@string/pref_enable_wifi_cell_data_usage_summary_on"
        android:title="@string/pref_enable_wifi_cell_data_usage_title"/>

    <CheckBoxPreference
        android:defaultValue="@bool/pref_enable_notifications_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_summary_off"
        android:summaryOn="@string/pref_enable_notifications_summary_on"
        android:title="@string/pref_enable_notifications_title"/>
</PreferenceScreen>